# routes/api.php
@@ -2,6 +2,8 @@
 
 use App\Http\Controllers\TourController;
 use App\Http\Controllers\ExcursionController;
+use App\Http\Controllers\OrderController;
+use App\Http\Requests\OrderStoreRequest;
 use App\Http\Controllers\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -34,9 +36,14 @@ Route::middleware('auth:sanctum')->get('/tours', 'App\Http\Controllers\TourContr
 
 Route::middleware('auth:sanctum')->get('/excursions', 'App\Http\Controllers\ExcursionController@index');
 
+Route::middleware('auth:sanctum')->get('/tours/availability', 'App\Http\Controllers\TourController@getToursAvailability');
+
+Route::middleware('auth:sanctum')->get('/excursions/availability', 'App\Http\Controllers\ExcursionController@getExcursionsAvailability');
+
 Route::middleware('auth:sanctum')->get('/tours/{id}', 'App\Http\Controllers\TourController@getTour');
 
 Route::middleware('auth:sanctum')->get('/excursions/{id}', 'App\Http\Controllers\ExcursionController@getExcursion');
+
 
 
 Route::post('/register', [AuthController::class, 'register']);
@@ -47,16 +54,7 @@ Route::middleware('auth:sanctum')->group(function () {
 });
 
 
-/*Route::get('/tours/{id}', function ($id) {
-    $tours = Tour::where('id', $id)->with('tourdate.tariffs')->first();
-    return new TourResource($tours);
-});*/
-
-
-/*Route::get('/excoursions/{id}', function ($id) {
-    $excoursions = Excoursion::where('id', $id)->with('excoursiondates.excoursiontariffs')->first();
-    return new ExcoursionResource($excoursions);
-});*/
+Route::post('/orders', [OrderController::class, 'store']);
 
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
